manifests/apps/nayris/apps/server/base/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nestjs-server
  labels:
    app: nestjs-server
    app.kubernetes.io/part-of: nayris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nestjs-server
  template:
    metadata:
      labels:
        app: nestjs-server
        deploymentconfig: nestjs-server
    spec:
      containers:
        - name: nestjs-server
          image: ghcr.io/kounex/nayris/nestjs-server:1.2.0
          ports:
            - name: 4444-tcp
              containerPort: 4444
              protocol: TCP
          volumeMounts:
            - name: yt-po-token
              mountPath: /etc/secrets/yt-po-token
              readOnly: true
          imagePullPolicy: Always
      volumes:
        - name: yt-po-token
          secret:
            secretName: yt-po-token
      restartPolicy: Always
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
